torch-sys/src/c_generated.rs

    pub fn atg_mean3(self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mean4(self_: *mut C_tensor, dim_: i64, keepdim_: c_int, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mean_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mean_out1(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mean_out2(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_median(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_median1(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_median_out(values_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_meshgrid(tensors_data: *const *mut C_tensor, tensors_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_min(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_min1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_min2(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_min_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_min_out1(min_: *mut C_tensor, min_indices_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_min_values(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_miopen_batch_norm(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, training_: c_int, exponential_average_factor_: f64, epsilon_: f64) -> *mut *mut C_tensor;
    pub fn atg_miopen_batch_norm_backward(input_: *mut C_tensor, grad_output_: *mut C_tensor, weight_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, save_mean_: *mut C_tensor, save_var_: *mut C_tensor, epsilon_: f64) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution(self_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution_backward_bias(grad_output_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution_backward_input(self_size_data: *const i64, self_size_len: c_int, grad_output_: *mut C_tensor, weight_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution_backward_weight(weight_size_data: *const i64, weight_size_len: c_int, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution_transpose(self_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, output_padding_data: *const i64, output_padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution_transpose_backward_input(grad_output_: *mut C_tensor, weight_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_miopen_convolution_transpose_backward_weight(weight_size_data: *const i64, weight_size_len: c_int, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mkldnn_convolution(self_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64) -> *mut *mut C_tensor;
    pub fn atg_mkldnn_convolution_backward_input(self_size_data: *const i64, self_size_len: c_int, grad_output_: *mut C_tensor, weight_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, bias_defined_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mkldnn_convolution_backward_weights(weight_size_data: *const i64, weight_size_len: c_int, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, bias_defined_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mm(self_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mm_out(result_: *mut C_tensor, self_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mode(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mode_out(values_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mse_loss(self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_mse_loss_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_mse_loss_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_mse_loss_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_mul(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mul1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_mul_(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mul_1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_mul_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_multilabel_margin_loss(self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_multilabel_margin_loss_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64, is_target_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_multilabel_margin_loss_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64, is_target_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_multilabel_margin_loss_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_multinomial(self_: *mut C_tensor, num_samples_: i64, replacement_: c_int) -> *mut *mut C_tensor;
    pub fn atg_multinomial_out(result_: *mut C_tensor, self_: *mut C_tensor, num_samples_: i64, replacement_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mv(self_: *mut C_tensor, vec_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mv_out(result_: *mut C_tensor, self_: *mut C_tensor, vec_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mvlgamma(self_: *mut C_tensor, p_: i64) -> *mut *mut C_tensor;
    pub fn atg_mvlgamma_(self_: *mut C_tensor, p_: i64) -> *mut *mut C_tensor;
    pub fn atg_narrow(self_: *mut C_tensor, dim_: i64, start_: i64, length_: i64) -> *mut *mut C_tensor;
    pub fn atg_narrow_copy(self_: *mut C_tensor, dim_: i64, start_: i64, length_: i64) -> *mut *mut C_tensor;
    pub fn atg_native_batch_norm(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, training_: c_int, momentum_: f64, eps_: f64) -> *mut *mut C_tensor;
    pub fn atg_native_clone(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_native_norm(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_native_pow(self_: *mut C_tensor, exponent_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_native_pow_out(result_: *mut C_tensor, self_: *mut C_tensor, exponent_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_native_resize_as_(self_: *mut C_tensor, the_template_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_native_zero_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ne(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_ne1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ne_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_ne_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ne_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_ne_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_neg(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_neg_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_neg_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nll_loss(self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64) -> *mut *mut C_tensor;
    pub fn atg_nll_loss2d(self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64) -> *mut *mut C_tensor;
    pub fn atg_nll_loss2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64, total_weight_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nll_loss2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64, total_weight_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nll_loss2d_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64) -> *mut *mut C_tensor;
    pub fn atg_nll_loss_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64, total_weight_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nll_loss_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64, total_weight_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nll_loss_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64, ignore_index_: i64) -> *mut *mut C_tensor;
    pub fn atg_nonzero(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nonzero_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_norm(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_norm1(self_: *mut C_tensor, p_: *mut C_scalar, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_norm_except_dim(v_: *mut C_tensor, pow_: i64, dim_: i64) -> *mut *mut C_tensor;
